--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Dionisius NP</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>A perfect application is not one that is expensive or error-free, but one that can be used effectively.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/dionisnp/" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/dionisius-nanda-priyadi/" target="_blank"><i class="bi bi-linkedin"></i></a>
