--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Intro</span></a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
+        <li><a href="portfolio.html"><i class="bi bi-laptop navicon"></i><span>Portfolio</span></a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
@@ -198,7 +199,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
         <p>An overview of my professional background, education, and work experience. It highlights my journey in the IT field, showcasing key achievements, skills, and the projects I've contributed to as a Full Stack Developer, both in freelance and corporate environments.</p>
-        <p><a href="#!">Click here</a> to view a list of applications I have developed and contributed to.</p>
+        <p><a href="portfolio.html">Click here</a> to view a list of applications I have developed and contributed to.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -248,7 +249,7 @@
             <div class="resume-item">
               <h4>Freelance Software Engineer</h4>
               <h5>Jun 2022 - Present</h5>
-              <p><em>CV. Mitra Super Teknologi, Depok, West Java</em></p>
+              <p><em>CV. Mitra Super Teknologi, Depok, West Java, Indonesia</em></p>
               <ul>
                 <li>Developed and maintained custom software solutions for various clients, focusing on both web and mobile applications.</li>
                 <li>Collaborated with clients to understand project requirements and provided tailored technical solutions to meet business needs.</li>
@@ -261,7 +262,7 @@
             <div class="resume-item">
               <h4>Back End Developer &amp; Project Leader</h4>
               <h5>Sep 2021 - Feb 2024</h5>
-              <p><em>PT. Hokky Sumber Makmur, Surabaya, East Java</em></p>
+              <p><em>PT. Hokky Sumber Makmur, Surabaya, East Java, Indonesia</em></p>
               <ul>
                 <li>Led and managed software development projects for internal business systems, focusing on automation and efficiency.</li>
                 <li>Designed and implemented RESTful APIs for integration across multiple platforms.</li>
