--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - MyResume Bootstrap Template</title>
+  <title>DNP - My Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,12 +44,12 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
+        <li><a href="index.html#hero"><i class="bi bi-house navicon"></i><span>Intro</span></a></li>
+        <li><a href="index.html#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
+        <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
+        <li><a href="portfolio.html" class="active"><i class="bi bi-laptop navicon"></i><span>Portfolio</span></a></li>
+        <li><a href="index.html#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
+        <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
 
@@ -62,45 +62,112 @@
       <div class="container">
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Starter Page</li>
+            <li><a href="index.html">Curriculum Vitae</a></li>
+            <li class="current">Portfolio</li>
           </ol>
         </nav>
-        <h1>Starter Page</h1>
+        <!-- <h1>Portfolio</h1> -->
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Starter Section Section -->
-    <section id="starter-section" class="starter-section section">
+    <!-- Resume Section -->
+    <section class="resume section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Starter Section</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      <div class="container">
 
-      <div class="container" data-aos="fade-up">
-        <p>Use this page as a starter for your own custom pages.</p>
+        <div class="row">
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="resume-item pb-0">
+              <h4>Landing Page with CMS App</h4>
+              <h5>2025</h5>
+              <p><em>Website Based</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Marketing Management App</h4>
+              <h5>2024</h5>
+              <p><em>Website Based</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Subscription Management App</h4>
+              <h5>2024</h5>
+              <p><em>Website Based</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>ERP App for Contractor</h4>
+              <h5>2022</h5>
+              <p><em>Website Based</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>eCommerce App for Retail</h4>
+              <h5>2021</h5>
+              <p><em>Website Based</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>ERP App for Retail</h4>
+              <h5>2021</h5>
+              <p><em>Website Based</em></p>
+            </div><!-- End Resume Item -->
+
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="resume-item">
+              <h4>Tracking Employee App</h4>
+              <h5>2021</h5>
+              <p><em>Website &amp; Mobile Based</em></p>
+            </div><!-- End Resume Item -->
+            
+            <div class="resume-item">
+              <h4>HRIS App</h4>
+              <h5>2021</h5>
+              <p><em>Website &amp; Mobile Based</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>COVID Patient Room Booking App</h4>
+              <h5>2020</h5>
+              <p><em>Website Based</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Robotic eCommerce</h4>
+              <h5>2016</h5>
+              <p><em>Website Based</em></p>
+            </div><!-- End Resume Item -->            
+
+            <div class="resume-item">
+              <h4>Company Profile</h4>
+              <h5>2016</h5>
+              <p><em>Website Based</em></p>
+            </div><!-- End Resume Item -->
+
+          </div>
+
+        </div>
+
       </div>
 
-    </section><!-- /Starter Section Section -->
+    </section><!-- /Resume Section -->
 
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">Dionisius NP</h3>
+      <p>A perfect application is not one that is expensive or error-free, but one that can be used effectively.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/dionisnp/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/dionisius-nanda-priyadi/" target="_blank"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Alex Smith</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">DNP</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
