--- a/portfolio.html
+++ b/portfolio.html
@@ -113,9 +113,10 @@
               <h5>2021</h5>
               <p><em>Website Based</em></p>
             </div><!-- End Resume Item -->
-
           </div>
 
+          <!-- DISINI BAGI DUANYA -->
+          
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="resume-item">
               <h4>Tracking Employee App</h4>
@@ -146,7 +147,6 @@
               <h5>2016</h5>
               <p><em>Website Based</em></p>
             </div><!-- End Resume Item -->
-
           </div>
 
         </div>
