--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="resume-item pb-0">
+            <div class="resume-item">
               <h4>Landing Page with CMS App</h4>
               <h5>2025</h5>
               <p><em>Website Based</em></p>
