--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item pb-0">
+            <div class="resume-item">
               <h4>Full Stack Developer</h4>
               <h5>Feb 2024 - Present</h5>
               <p><em>Universitas Dinamika, Solusi Sistem Informasi, Surabaya, East Java, Indonesia</em></p>
