--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
           <div class="col-lg-9">
             <h2>call me, Dion</h2>
             <p>I'm <span class="typed" data-typed-items="Fullstack Engineer, Back End, Front End, DevOps">Fullstack Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <div class="text-left mt-3">
+              <a href="assets/cv.pdf" target="_blank" class="btn btn-primary" download>Download CV</a>
+            </div>
             <div class="social-links">
               <a href="https://www.instagram.com/dionisnp/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/in/dionisius-nanda-priyadi/" target="_blank"><i class="bi bi-linkedin"></i></a>
