--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>call me, Dion</h2>
-            <p>I'm <span class="typed" data-typed-items="Fullstack Engineer, Back End, Front End, DevOps">Fullstack Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm <span class="typed" data-typed-items="Software Engineer, Back End, Front End, DevOps">Software Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="text-left mt-3">
-              <a href="assets/cv.pdf" target="_blank" class="btn btn-primary" download>Download CV</a>
+              <a href="assets/cv.pdf" target="_blank" class="btn btn-primary" download>Show CV</a>
             </div>
             <div class="social-links">
               <a href="https://www.instagram.com/dionisnp/" target="_blank"><i class="bi bi-instagram"></i></a>
@@ -142,23 +142,23 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>PHP Laravel</span> <i class="val">100%</i></span>
+              <span class="skill"><span>PHP-Laravel, Dart-Flutter, Java-Springboot</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Dart Flutter</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Java Springboot</span> <i class="val">70%</i></span>
+              <span class="skill"><span>SQL, No SQL</span> <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Shared, VPS Hosting</span> <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -167,21 +167,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Artificial Inteligence</span> <i class="val">60%</i></span>
+              <span class="skill"><span>Payment Gateway, Google Cloud, AWS</span> <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>VPS Ubuntu</span> <i class="val">75%</i></span>
+              <span class="skill"><span>Artificial Intelligence</span> <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Shared Hosting</span> <i class="val">100%</i></span>
+              <span class="skill"><span>Additional Tools (Git, Ngrok, Postman, Whimsical, SEO Tools, etc)</span> <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -201,7 +201,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>An overview of my professional background, education, and work experience. It highlights my journey in the IT field, showcasing key achievements, skills, and the projects I've contributed to as a Full Stack Developer, both in freelance and corporate environments.</p>
+        <p>An overview of my professional background, education, and work experience. It highlights my journey in the IT field, showcasing key achievements, skills, and the projects I've contributed to as a Software Engineer, both in freelance and corporate environments.</p>
         <p><a href="portfolio.html">Click here</a> to view a list of applications I have developed and contributed to.</p>
       </div><!-- End Section Title -->
 
@@ -228,8 +228,8 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Undergraduate Studies in Information Systems</h4>
-              <h5>2014 - 2018 (Incomplete)</h5>
-              <p><em>Universitas Airlangga (UNAIR), Surabaya, Indonesia</em></p>
+              <h5>2014 - 2021 (Unfinished)</h5>
+              <p><em>Airlangga University (UNAIR), Surabaya, Indonesia</em></p>
               <p>Completed core coursework in software engineering, databases, and information systems analysis. Although the degree was not completed, the academic experience laid a strong foundation for a career in IT and software development.</p>
             </div><!-- End Resume Item -->
           </div>
@@ -237,7 +237,7 @@
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Full Stack Developer</h4>
+              <h4>Software Engineer</h4>
               <h5>Feb 2024 - Present</h5>
               <p><em>Universitas Dinamika, Solusi Sistem Informasi, Surabaya, East Java, Indonesia</em></p>
               <ul>
@@ -250,9 +250,9 @@
             </div><!-- End Resume Item -->
 
             <div class="resume-item">
-              <h4>Freelance Software Engineer</h4>
+              <h4>Software Engineer</h4>
               <h5>Jun 2022 - Present</h5>
-              <p><em>CV. Mitra Super Teknologi, Depok, West Java, Indonesia</em></p>
+              <p><em>CV Mitra Super Teknologi, Depok, West Java, Indonesia</em></p>
               <ul>
                 <li>Developed and maintained custom software solutions for various clients, focusing on both web and mobile applications.</li>
                 <li>Collaborated with clients to understand project requirements and provided tailored technical solutions to meet business needs.</li>
@@ -263,9 +263,9 @@
             </div><!-- End Resume Item -->            
 
             <div class="resume-item">
-              <h4>Back End Developer &amp; Project Leader</h4>
+              <h4>Back End Engineer &amp; Project Leader</h4>
               <h5>Sep 2021 - Feb 2024</h5>
-              <p><em>PT. Hokky Sumber Makmur, Surabaya, East Java, Indonesia</em></p>
+              <p><em>PT Hokky Sumber Makmur, Surabaya, East Java, Indonesia</em></p>
               <ul>
                 <li>Led and managed software development projects for internal business systems, focusing on automation and efficiency.</li>
                 <li>Designed and implemented RESTful APIs for integration across multiple platforms.</li>
