--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>call me, Dion</h2>
-            <p>I'm <span class="typed" data-typed-items="Software Engineer, Back End, Front End, DevOps">Software Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm <span class="typed" data-typed-items="Software Engineer, Back End, Front End, DevOps, Human">Software Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="text-left mt-3">
               <a href="assets/cv.pdf" target="_blank" class="btn btn-primary" download>Show CV</a>
             </div>
@@ -210,7 +210,7 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
 
             <div class="resume-item pb-0">
               <h4>Dionisius NP</h4>
@@ -240,39 +240,39 @@
               <h4>Software Engineer</h4>
               <h5>Feb 2024 - Present</h5>
               <p><em>Universitas Dinamika, Solusi Sistem Informasi, Surabaya, East Java, Indonesia</em></p>
-              <ul>
+              <!-- <ul>
                 <li>Designing, developing, and maintaining custom software solutions for various clients, both internal and external.</li>
                 <li>Collaborating with cross-functional teams to define project requirements, scope, and deliverables.</li>
                 <li>Developing both frontend and backend systems using modern technologies.</li>
                 <li>Implementing and optimizing RESTful APIs to support seamless integration across various platforms.</li>
                 <li>Ensuring application scalability, security, and high performance across all stages of the software development lifecycle.</li>
-              </ul>
+              </ul> -->
             </div><!-- End Resume Item -->
 
             <div class="resume-item">
               <h4>Software Engineer</h4>
               <h5>Jun 2022 - Present</h5>
               <p><em>CV Mitra Super Teknologi, Depok, West Java, Indonesia</em></p>
-              <ul>
+              <!-- <ul>
                 <li>Developed and maintained custom software solutions for various clients, focusing on both web and mobile applications.</li>
                 <li>Collaborated with clients to understand project requirements and provided tailored technical solutions to meet business needs.</li>
                 <li>Built and integrated APIs, ensuring smooth data exchange between frontend and backend systems.</li>
                 <li>Utilized modern technologies such as Laravel, Flutter, and MySQL to create scalable, high-performance applications.</li>
                 <li>Provided ongoing technical support and maintenance for deployed applications, optimizing them for performance and reliability.</li>
-              </ul>
+              </ul> -->
             </div><!-- End Resume Item -->            
 
             <div class="resume-item">
               <h4>Back End Engineer &amp; Project Leader</h4>
               <h5>Sep 2021 - Feb 2024</h5>
               <p><em>PT Hokky Sumber Makmur, Surabaya, East Java, Indonesia</em></p>
-              <ul>
+              <!-- <ul>
                 <li>Led and managed software development projects for internal business systems, focusing on automation and efficiency.</li>
                 <li>Designed and implemented RESTful APIs for integration across multiple platforms.</li>
                 <li>Collaborated with cross-functional teams to gather requirements and deliver scalable backend solutions using Java Springboot and MySQL.</li>
                 <li>Collaborated closely with the DevOps team to ensure smooth deployment and stable application environments on VPS infrastructure.</li>
                 <li>Supervised junior developers and coordinated task distribution to ensure timely delivery.</li>
-              </ul>
+              </ul> -->
             </div><!-- End Resume Item -->
 
           </div>
